--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+body{
+  min-height: 100vh;
+  align-items: center;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
   color: #61dafb;
 }
+.container{
+  margin-top:50px;
+}
+.ImagesGrid{
+  margin-top:25px;
+}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.ImagesGrid figure{
+  width:100%;
+  height: 100%;
+  user-select: none;
+  cursor: pointer;
+  box-shadow: 0px 1px 3px 2px rgba(34,43,143,0.2);
+  border:2px white solid;
+  overflow: hidden;
+}
+
+.ImagesGrid figure img{
+  object-fit: cover;
+  width:100%;
+  height: 100%;
+}
+.ImagesGrid .NewsImg{
+  margin:15px 0;
+}
+.Heading{
+  position: relative;
+}
+
+.Heading .changeButton{
+  position: absolute;
+  right:10px;
+  top:10px;
+  bottom:0;
+  z-index:123;
+}
+
+.carouselDiv .ImagesGrid{
+  background: #ccc;
+}
+
+@media screen and (max-width:568px){
+  .Heading .changeButton{
+    width:100%;
+    position: fixed;
+    left:0;
+    right:0;
+    top:auto;
+    bottom:0;
+    border-radius: 0;
   }
-  to {
-    transform: rotate(360deg);
+  body{
+    padding-bottom: 80px;
   }
 }
